--- a/app/views/admin/organizations/_interest.html.erb
+++ b/app/views/admin/organizations/_interest.html.erb
@@ -1,10 +1,10 @@
 <fieldset>
-  <legend>Area de Interés</legend>
+  <legend><%= t('backend.interest.title_fieldset') %></legend>
   <div class="row">
     <div class="small-12 columns">
       <%= f.collection_check_boxes(:interest_ids, Interest.all, :id, :name) do |f| %>
         <%= f.label class:"small-6 columns" do%>
-          <%= f.check_box + f.text %>
+          <%= f.check_box %> <span> <%= f.text %> </span>
         <%end%>
       <% end %>
     </div>
