--- a/app/views/admin/organizations/_legal_representant.html.erb
+++ b/app/views/admin/organizations/_legal_representant.html.erb
@@ -1,12 +1,12 @@
 <fieldset>
-  <legend>Representante Legal</legend>
+  <legend><%= t('backend.legal_representant.title_fieldset') %></legend>
   <div class="row">
     <div id="nested-legal-representant">
       <div class="small-12 columns">
         <%= f.fields_for :legal_representant do |legal_representant_builder| %>
           <%= render 'legal_representant_fields', f: legal_representant_builder %>
         <% end %>
-        <%= link_to_add_association "Añadir legal representant", f, :legal_representant,
+        <%= link_to_add_association t('backend.legal_representant.add_legal_representative'), f, :legal_representant,
                                     partial: "legal_representant_fields",
                                     id: "legal_representant_link",
                                     class: "button tiny radius info",
