--- a/app/views/admin/organizations/_lobbies_data.html.erb
+++ b/app/views/admin/organizations/_lobbies_data.html.erb
@@ -1,27 +1,21 @@
 <fieldset>
-  <legend>Datos de quien va a ejercer la actividad de lobby por cuenta propia</legend>
+  <legend><%= t('backend.lobbies_data.title_fieldset') %></legend>
   <div class="row">
     <div class="small-6 columns">
-      <%= f.label :fiscal_year %>
+      <%= f.label t('backend.lobbies_data.fiscal_year') %>
       <%= f.number_field :fiscal_year %>
     </div>
     <div class="small-6 columns">
-      <%= f.label :range_funds %>
+      <%= f.label t('backend.lobbies_data.range_funds') %>
       <%= f.select :range_funds, Organization.range_funds.keys.to_a %>
     </div>
     <div class="small-12 columns">
-      <%= f.label :subvention do %>
-        ¿Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat?
-        <br />
-        <%= f.check_box :subvention %> Si
-      <% end %>
+      <%= f.label t('backend.lobbies_data.subvention') %>
+      <%= f.check_box :subvention %> Si
     </div>
     <div class="small-12 columns">
-      <%= f.label :contract do %>
-        ¿Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat?
-        <br />
-        <%= f.check_box :contract %> Si
-      <% end %>
+      <%= f.label t('backend.lobbies_data.subvention') %>
+      <%= f.check_box :contract %> Si
     </div>
   </div>
 </fieldset>
