--- a/app/views/admin/organizations/_agents_fields.html.erb
+++ b/app/views/admin/organizations/_agents_fields.html.erb
@@ -1,42 +1,42 @@
 <div id="<%= dom_id(f.object) %>" class="nested-fields">
   <%= f.hidden_field :id %>
   <div class="small-6 columns">
-    <%= f.label :identifier %>
+    <%= f.label t('backend.agents.identifier') %>
     <%= f.text_field :identifier %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :name %>
+    <%= f.label t('backend.agents.name') %>
     <%= f.text_field :name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :first_name %>
+    <%= f.label t('backend.agents.first_name') %>
     <%= f.text_field :first_name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :last_name %>
+    <%= f.label t('backend.agents.last_name') %>
     <%= f.text_field :last_name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :from %>
+    <%= f.label t('backend.agents.from') %>
     <%= f.date_field :from %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :to %>
+    <%= f.label t('backend.agents.to') %>
     <%= f.date_field :to %>
   </div>
 
   <div class="small-12 columns">
-    <%= f.label :public_assignments %>
+    <%= f.label t('backend.agents.public_assignments') %>
     <%= f.text_area :public_assignments %>
   </div>
 
   <div class="small-12 columns">
-    <small>Solo rellenar el campo en caso de cumplir la pregunta.</small>
+    <small><%= t('backend.agents.only_fill_if_answer') %> </small>
     <%= link_to_remove_association "Eliminar", f, class: "button tiny radius alert right" %>
     <hr />
   </div>
