--- a/app/views/admin/organizations/_reference.html.erb
+++ b/app/views/admin/organizations/_reference.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-  <legend>Referencia de la declaracíon responsable</legend>
-    <%= f.label :reference %>
+  <legend><%= t('backend.reference.title_fieldset') %></legend>
+    <%= f.label :reference, t('backend.reference.title') %>
     <%= f.text_field :reference %>
 </fieldset>
