--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -5,15 +5,15 @@
 </div>
 
 <div class="row">
-
   <div class="small-12 large-4 columns">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
   <div class="small-12 large-7 large-ofsset-1 columns mb40">
-
-    <div class="small-12 columns mb10">
-      <p><strong class="result-l mb20"><%= oganizations_index_subtitle %></strong></p>
+    <div class="row">
+      <div class="small-12 columns mb10">
+        <p><strong class="result-l mb20"><%= oganizations_index_subtitle %></strong></p>
+      </div>
     </div>
-
     <% @paginated_organizations.each do |organization| %>
       <%= render organization %>
     <% end %>
