--- a/app/views/admin/organizations/_legal_representant_fields.html.erb
+++ b/app/views/admin/organizations/_legal_representant_fields.html.erb
@@ -3,32 +3,32 @@
   <%= f.hidden_field :id %>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.legal_representant.identifier') %>
+    <%= f.label :identifier, t('backend.legal_representant.identifier') %>
     <%= f.text_field :identifier %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.legal_representant.name') %>
+    <%= f.label :name, t('backend.legal_representant.name') %>
     <%= f.text_field :name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.legal_representant.first_name') %>
+    <%= f.label :first_name, t('backend.legal_representant.first_name') %>
     <%= f.text_field :first_name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.legal_representant.last_name') %>
+    <%= f.label :last_name, t('backend.legal_representant.last_name') %>
     <%= f.text_field :last_name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.legal_representant.phones') %>
+    <%= f.label :phones, t('backend.legal_representant.phones') %>
     <%= f.text_field :phones %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.legal_representant.email') %>
+    <%= f.label :email, t('backend.legal_representant.email') %>
     <%= f.text_field :email %>
   </div>
 
