--- a/app/views/admin/organizations/_user_fields.html.erb
+++ b/app/views/admin/organizations/_user_fields.html.erb
@@ -7,32 +7,32 @@
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.contact_person.name') %>
+    <%= f.label :first_name, t('backend.contact_person.name') %>
     <%= f.text_field :first_name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.contact_person.last_name') %>
+    <%= f.label :last_name, t('backend.contact_person.last_name') %>
     <%= f.text_field :last_name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.contact_person.phone') %>
+    <%= f.label :phones, t('backend.contact_person.phone') %>
     <%= f.text_field :phones %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.contact_person.email') %>
+    <%= f.label :email, t('backend.contact_person.email') %>
     <%= f.text_field :email %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.contact_person.password') %>
+    <%= f.label :password, t('backend.contact_person.password') %>
     <%= f.text_field :password %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.contact_person.password_confirmation') %>
+    <%= f.label :password_confirmation, t('backend.contact_person.password_confirmation') %>
     <%= f.text_field :password_confirmation %>
   </div>
 
