--- a/app/views/admin/organizations/_agents_fields.html.erb
+++ b/app/views/admin/organizations/_agents_fields.html.erb
@@ -1,37 +1,37 @@
 <div id="<%= dom_id(f.object) %>" class="nested-fields">
   <%= f.hidden_field :id %>
   <div class="small-6 columns">
-    <%= f.label t('backend.agents.identifier') %>
+    <%= f.label :identifier, t('backend.agents.identifier') %>
     <%= f.text_field :identifier %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.agents.name') %>
+    <%= f.label :name, t('backend.agents.name') %>
     <%= f.text_field :name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.agents.first_name') %>
+    <%= f.label :first_name, t('backend.agents.first_name') %>
     <%= f.text_field :first_name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.agents.last_name') %>
+    <%= f.label :last_name, t('backend.agents.last_name') %>
     <%= f.text_field :last_name %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.agents.from') %>
+    <%= f.label :from, t('backend.agents.from') %>
     <%= f.date_field :from %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label t('backend.agents.to') %>
+    <%= f.label :to, t('backend.agents.to') %>
     <%= f.date_field :to %>
   </div>
 
   <div class="small-12 columns">
-    <%= f.label t('backend.agents.public_assignments') %>
+    <%= f.label :public_assignments, t('backend.agents.public_assignments') %>
     <%= f.text_area :public_assignments %>
   </div>
 
