--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -3,47 +3,47 @@
     <%= f.hidden_field :id %>
 
     <div class="small-6 columns">
-      <%= f.label t('backend.represented_entities.identifier') %>
+      <%= f.label :identifier, t('backend.represented_entities.identifier') %>
       <%= f.text_field :identifier %>
     </div>
 
     <div class="small-6 columns">
-      <%= f.label t('backend.represented_entities.name') %>
+      <%= f.label :name, t('backend.represented_entities.name') %>
       <%= f.text_field :name %>
     </div>
 
     <div class="small-6 columns">
-      <%= f.label t('backend.represented_entities.first_name') %>
+      <%= f.label :first_name, t('backend.represented_entities.first_name') %>
       <%= f.text_field :first_name %>
     </div>
 
     <div class="small-6 columns">
-      <%= f.label t('backend.represented_entities.last_name') %>
+      <%= f.label :last_name, t('backend.represented_entities.last_name') %>
       <%= f.text_field :last_name %>
     </div>
 
     <div class="small-12 columns">
-      <%= f.label t('backend.represented_entities.from') %>
+      <%= f.label :from, t('backend.represented_entities.from') %>
       <%= f.date_field :from %>
     </div>
 
     <div class="small-6 columns">
-      <%= f.label t('backend.represented_entities.fiscal_year') %>
+      <%= f.label :fiscal_year, t('backend.represented_entities.fiscal_year') %>
       <%= f.number_field :fiscal_year %>
     </div>
 
     <div class="small-6 columns">
-      <%= f.label t('backend.represented_entities.range_founds') %>
+      <%= f.label :range_funds, t('backend.represented_entities.range_founds') %>
       <%= f.select :range_funds, Organization.range_funds.keys.to_a %>
     </div>
 
     <div class="small-12 columns">
-      <%= f.label t('backend.represented_entities.subvention') %>
+      <%= f.label :subvention, t('backend.represented_entities.subvention') %>
       <%= f.check_box :subvention %> Si
     </div>
 
     <div class="small-12 columns">
-      <%= f.label t('backend.represented_entities.contract') %>
+      <%= f.label :contract, t('backend.represented_entities.contract') %>
       <%= f.check_box :contract %> Si
     </div>
 
