--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -23,7 +23,7 @@
 <div class="row">
   <div class="small-12 large-7 small-offset-1 columns right mb20">
     <div class="text-center">
-      <%#= paginate @organizations %>
+      <%= paginate @organizations.hits %>
     </div>
   </div>
 </div>
