--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -33,8 +33,8 @@
     </div>
 
     <div class="small-6 columns">
-      <%= f.label :range_funds, t('backend.represented_entities.range_founds') %>
-      <%= f.select :range_funds, Organization.range_funds.keys.to_a %>
+      <%= f.label :range_fund, t('backend.represented_entities.range_founds') %>
+      <%= f.select :range_fund, Organization.range_funds.keys.to_a %>
     </div>
 
     <div class="small-12 columns">
