--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -6,7 +6,7 @@
 
 <div class="row">
   <div class="small-12 large-4 columns">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p><%= t "organizations.description" %></p>
   </div>
   <div class="small-12 large-7 large-ofsset-1 columns mb40">
     <div class="row">
