--- a/app/views/admin/organizations/_data.html.erb
+++ b/app/views/admin/organizations/_data.html.erb
@@ -10,12 +10,12 @@
       <%= f.text_field :name %>
     </div>
     <div class="small-6 columns">
-      <%= f.label :first_name, t('backend.identifying_data.first_name') %>
-      <%= f.text_field :first_name %>
+      <%= f.label :first_surname, t('backend.identifying_data.first_surname') %>
+      <%= f.text_field :first_surname %>
     </div>
     <div class="small-6 columns">
-      <%= f.label :last_name, t('backend.identifying_data.last_name') %>
-      <%= f.text_field :last_name %>
+      <%= f.label :second_surname, t('backend.identifying_data.second_surname') %>
+      <%= f.text_field :second_surname %>
     </div>
     <div class="small-6 columns">
       <%= f.label :phones, t('backend.identifying_data.phones') %>
