--- a/app/views/admin/organizations/_agents_fields.html.erb
+++ b/app/views/admin/organizations/_agents_fields.html.erb
@@ -11,13 +11,13 @@
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :first_name, t('backend.agents.first_name') %>
-    <%= f.text_field :first_name %>
+    <%= f.label :first_surname, t('backend.agents.first_surname') %>
+    <%= f.text_field :first_surname %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :last_name, t('backend.agents.last_name') %>
-    <%= f.text_field :last_name %>
+    <%= f.label :second_surname, t('backend.agents.second_surname') %>
+    <%= f.text_field :second_surname %>
   </div>
 
   <div class="small-6 columns">
