--- a/app/views/admin/organizations/_legal_representant_fields.html.erb
+++ b/app/views/admin/organizations/_legal_representant_fields.html.erb
@@ -13,13 +13,13 @@
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :first_name, t('backend.legal_representant.first_name') %>
-    <%= f.text_field :first_name %>
+    <%= f.label :first_surname, t('backend.legal_representant.first_surname') %>
+    <%= f.text_field :first_surname %>
   </div>
 
   <div class="small-6 columns">
-    <%= f.label :last_name, t('backend.legal_representant.last_name') %>
-    <%= f.text_field :last_name %>
+    <%= f.label :second_surname, t('backend.legal_representant.second_surname') %>
+    <%= f.text_field :second_surname %>
   </div>
 
   <div class="small-6 columns">
