--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -13,13 +13,13 @@
     </div>
 
     <div class="small-6 columns">
-      <%= f.label :first_name, t('backend.represented_entities.first_name') %>
-      <%= f.text_field :first_name %>
+      <%= f.label :first_surname, t('backend.represented_entities.first_surname') %>
+      <%= f.text_field :first_surname %>
     </div>
 
     <div class="small-6 columns">
-      <%= f.label :last_name, t('backend.represented_entities.last_name') %>
-      <%= f.text_field :last_name %>
+      <%= f.label :second_surname, t('backend.represented_entities.second_surname') %>
+      <%= f.text_field :second_surname %>
     </div>
 
     <div class="small-12 columns">
