--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -4,8 +4,6 @@
 <%#= Datos %>
 <%= @organization.identifier %>
 <%= @organization.name %>
-<%= @organization.first_name %>
-<%= @organization.last_name %>
 <%= @organization.web %>
 <%= @organization.category %>
 <%= @organization.address %>
@@ -34,9 +32,21 @@
 <%#= Represented Entity %>
 <% @organization.represented_entities.each do |represented_entity| %>
   <%= represented_entity.identifier %>
-  <%= represented_entity.name %>
-  <%= represented_entity.first_name %>
-  <%= represented_entity.last_name %>
-  <%= represented_entity.phones %>
-  <%= represented_entity.email %>
+  <%= represented_entity.fullname %>
+  <%= represented_entity.from %>
+  <%= represented_entity.to if represented_entity.to.present? %>
+  <%= represented_entity.fiscal_year %>
+  <%= represented_entity.range_fund %>
+  <%= represented_entity.subvention %>
+  <%= represented_entity.contract %>
+<% end %>
+
+<% @organization.agents.each do |agent| %>
+  <%= agent.fullname %>
+  <%= agent.from %>
+  <%= agent.to if agent.to.present? %>
+<% end %>
+
+<% @organization.interests.each do |interest| %>
+  <%= interest.name %>
 <% end %>
