--- a/app/views/organizations/_organization.html.erb
+++ b/app/views/organizations/_organization.html.erb
@@ -1,6 +1,6 @@
 <article id="<%= dom_id(organization)%>" class="post organization">
-  <h1 class="organization_name">
-    <%= link_to organization.fullname, "#" %>
+  <h1 class="organization_name post__title">
+    <%= link_to organization.fullname, organization_path(organization) %>
   </h1>
   <p><%= I18n.l organization.inscription_date, format: :complete %></p>
 </article>
