Move update password logic from devise/registrationscontroller to a new admin/password_controller

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -56,7 +56,7 @@
       <% end %>
     </li>
     <li class="<%= active_menu('users/registrations') %>">
-      <%= link_to edit_user_passwords_path do %>
+      <%= link_to edit_password_path do %>
           <i class="fi-key size-18"> <%= t("backend.change_password")%></i>
       <% end %>
     </li>
