--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7031,7 +7031,8 @@ body {
     margin: 0 -0.9375rem; } }
 .box p {
   font-size: 18px;
-  line-height: 18px; }
+  line-height: 18px;
+  margin-bottom:0.5rem; }
 @media only screen and (max-width: 40em) {
   .box p {
     font-size: 13px;
